# templates

./: LICENSE
cpp/: CMakeLists.txt  Dockerfile
cpp/.devcontainer/: devcontainer.json
cpp/include/: Hello.h  Sample.h
cpp/src/: Hello.cpp  Sample.cpp  main.cpp
jupyter/: hello.ipynb
